--- a/index.html
+++ b/index.html
@@ -1,12 +1,125 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
+<head>
+	<meta charset="utf-8">
+	<title>HTML Academy: Техномарт</title>
+</head>
+<body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+	<!-- HEADER -->
+	<header class="main-header">
 
-  </body>
+		<!-- top menu -->
+		<section class="top-menu">
+			<p class="top-main-header-logo">Техномарт</p>
+
+			<div class="search">
+				<span class="icon-search"></span>
+				<p>Поиск:</p>
+			</div>
+
+			<div class="bookmark">
+				<span class="icon-bookmark"></span>
+				<p>Корзина: 0</p>
+			</div>
+
+			<a class="btn btn-order" href="#">Оформить заказ</a>
+		</section>
+
+		<!-- main navigation -->
+		<nav class="main-navigation">
+			<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+
+			<div class="navigation-contacts">
+				<p class="navigation-phone">
+					<span class="navigation-icon-phone"></span>
+					<span class="navigation-phone-number">+7 (812) 555-05-55</span>
+				</p>
+				<p class="navigation-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+			</div>
+
+			<a class="navigation-icon-login" href="#">Вход</a>
+			<a class="navigation-registration" href="#">Регистрация</a>
+
+			<ul class="site-navigation">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Компания</a></li>
+				<li><a href="#">Каталог</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Спецпредложения</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<!-- MAIN -->
+	<main class="main-container">
+
+		<section class="information">
+			<section class="information-review">
+				<h2 class="information-title">КОМПАНИЯ «Техномарт»</h2>
+				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+				<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
+				<ul  class="collaboration">
+					<li>Деловые линии</li>
+					<li>Автотрейдинг</li>
+					<li>ЖелДорЭкспедиция</li>
+				</ul>
+				<a class="btn about-company" href="#">Подробнее о компании</a>
+			</section>
+
+			<section class="contacts">
+				<h2>Контакты</h2>
+				<p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
+				<img class="map-location" src="#" alt="Карта">
+				<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
+			</section>
+		</section>
+	</main>
+
+	<!-- FOOTER -->
+	<footer class="main-footer">
+
+		<!-- footer top -->
+		<section class="footer-top">
+			<div class="footer-contact-information">
+				<a class="#">Техномарт</a>
+				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+			</div>
+
+			<ul class="footer-navigation">
+				<li><a href="#">Компания</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Каталог</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<ul class="footer-offers">
+				<li><a href="#">Материалы</a></li>
+				<li><a href="#">Техника</a></li>
+				<li><a href="#">Инструмент</a></li>
+				<li><a href="#">Спецпредложения</a></li>
+			</ul>
+		</section>
+
+		<!-- footer bottom -->
+		<section class="footer-bottom">
+			<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+
+			<ul class="footer-bottom-social">
+				<li><a class="btn-social btn-social-vk" href="#">Вконтакте</a></li>
+				<li><a class="btn-social btn-social-fb" href="#">Фейсбук</a></li>
+				<li><a class="btn-social btn-social-i" href="#">Инстаграм</a></li>
+			</ul>
+
+			<p class="feedback">Обратная связь:
+			    <a href="#">mail@htmlacademy.ru</a>
+			</p>
+			<p class="designed-by">Разработано -
+				<a href="https://htmlacademy.ru/" target="_blank">htmlacademy.ru</a>
+			</p>
+		</section>
+	</footer>
+</body>
 </html>
