--- a/index.html
+++ b/index.html
@@ -10,47 +10,47 @@
 	<header class="main-header">
 
 		<!-- top menu -->
-		<section class="top-menu">
-			<p class="top-main-header-logo">Техномарт</p>
+		<div class="main-header-top">
+			<a class="header-logo">Техномарт</a>
 
 			<div class="search">
-				<span class="icon-search"></span>
-				<p>Поиск:</p>
+				<label>Поиск:</label>
+				<button></button>
 			</div>
 
 			<div class="bookmark">
-				<span class="icon-bookmark"></span>
-				<p>Корзина: 0</p>
+				<a class="bookmark-link" href="#">Закладки: 0</a>
+			</div>
+
+			<div class="card">
+				<a class="card-link" href="#">Корзина: 0</a>
 			</div>
 
 			<a class="btn btn-order" href="#">Оформить заказ</a>
-		</section>
+		</div>
 
 		<!-- main navigation -->
-		<nav class="main-navigation">
 			<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-			<div class="navigation-contacts">
-				<p class="navigation-phone">
-					<span class="navigation-icon-phone"></span>
-					<span class="navigation-phone-number">+7 (812) 555-05-55</span>
-				</p>
-				<p class="navigation-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+			<div class="contacts">
+					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 
-			<a class="navigation-icon-login" href="#">Вход</a>
-			<a class="navigation-registration" href="#">Регистрация</a>
+			<a class="icon-login" href="#">Вход</a>
+			<a class="registration" href="#">Регистрация</a>
 
-			<ul class="site-navigation">
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Компания</a></li>
-				<li><a href="#">Каталог</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="#">Спецпредложения</a></li>
-				<li><a href="#">Доставка</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-		</nav>
+			<nav class="main-navigation">
+				<ul class="site-navigation">
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Компания</a></li>
+					<li><a href="#">Каталог</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="#">Доставка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
 	</header>
 
 	<!-- MAIN -->
@@ -82,10 +82,11 @@
 	<footer class="main-footer">
 
 		<!-- footer top -->
-		<section class="footer-top">
+		<div class="footer-top">
 			<div class="footer-contact-information">
 				<a class="#">Техномарт</a>
-				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+					<a href="tel:+78125550555">+7 (812) 555-05-55</a>
 			</div>
 
 			<ul class="footer-navigation">
@@ -101,11 +102,12 @@
 				<li><a href="#">Инструмент</a></li>
 				<li><a href="#">Спецпредложения</a></li>
 			</ul>
-		</section>
+		</div>
 
 		<!-- footer bottom -->
-		<section class="footer-bottom">
-			<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+		<div class="footer-bottom">
+			<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+
 
 			<ul class="footer-bottom-social">
 				<li><a class="btn-social btn-social-vk" href="#">Вконтакте</a></li>
@@ -114,12 +116,12 @@
 			</ul>
 
 			<p class="feedback">Обратная связь:
-			    <a href="#">mail@htmlacademy.ru</a>
+			    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
 			</p>
 			<p class="designed-by">Разработано -
-				<a href="https://htmlacademy.ru/" target="_blank">htmlacademy.ru</a>
+				<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
 			</p>
-		</section>
+		</div>
 	</footer>
 </body>
 </html>
