--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- main navigation -->
 			<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-			<div class="contacts">
+			<div class="navigation-contacts">
 					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
@@ -54,11 +54,11 @@
 	</header>
 
 	<!-- MAIN -->
-	<main class="main-container">
+	<main class="main">
 
-		<section class="information">
+		<div class="information">
 			<section class="information-review">
-				<h2 class="information-title">КОМПАНИЯ «Техномарт»</h2>
+				<h2 class="information-title">Компания «Техномарт»</h2>
 				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 				<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
 				<ul  class="collaboration">
@@ -72,21 +72,22 @@
 			<section class="contacts">
 				<h2>Контакты</h2>
 				<p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
-				<img class="map-location" src="#" alt="Карта">
+				<img class="map-location" src="#" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
 				<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
 			</section>
-		</section>
+		</div>
 	</main>
 
 	<!-- FOOTER -->
-	<footer class="main-footer">
+	<footer class="footer">
 
 		<!-- footer top -->
 		<div class="footer-top">
-			<div class="footer-contact-information">
-				<a class="#">Техномарт</a>
+			<div class="footer-contact">
+				<a class="">Техномарт</a>
 				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 					<a href="tel:+78125550555">+7 (812) 555-05-55</a>
+				</p>
 			</div>
 
 			<ul class="footer-navigation">
@@ -107,7 +108,6 @@
 		<!-- footer bottom -->
 		<div class="footer-bottom">
 			<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
-
 
 			<ul class="footer-bottom-social">
 				<li><a class="btn-social btn-social-vk" href="#">Вконтакте</a></li>
