--- a/inner.html
+++ b/inner.html
@@ -32,12 +32,12 @@
 		<!-- main navigation -->
 			<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-			<div class="contacts">
+			<div class="navigation-contacts">
 					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 
-			<a class="icon-login" href="#">Равшан Джамшутович</a>
+			<a class="navigation-login" href="#">Равшан Джамшутович</a>
 			<a href="#">Мои заказы</a>
 			<a href="#">Личный кабинет</a>
 
@@ -56,7 +56,7 @@
 
 
 	<!-- MAIN -->
-	<main class="main-container">
+	<main class="main">
 
 		<!-- breakdcrumbs -->
 		<ul class="breadcrumbs">
@@ -65,7 +65,7 @@
 			<li><a href="#">Инструмент</a></li>
 			<li class="breadcrumbs-current">Перфораторы</li>
 		</ul>
-		<h1>Перфораторы</h1>
+		<h2>Перфораторы</h2>
 
 		<!-- Здесь будет фильтр -->
 
@@ -190,14 +190,15 @@
 	</main>
 
 	 <!-- FOOTER -->
-	<footer class="main-footer">
+	<footer class="footer">
 
 		<!-- footer top -->
 		<div class="footer-top">
-			<div class="footer-contact-information">
+			<div class="footer-contact">
 				<a class="#" href="index.html">Техномарт</a>
 				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 					<a href="tel:+78125550555">+7 (812) 555-05-55</a>
+				</p>
 			</div>
 
 			<ul class="footer-navigation">
