Изменил класс для ссылки

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 
-			<a class="icon-login" href="#">Вход</a>
+			<a class="login" href="#">Вход</a>
 			<a class="registration" href="#">Регистрация</a>
 
 			<nav class="main-navigation">
