--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 		</div>
 
 		<!-- main navigation -->
-			<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+			<h1 class="page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
 			<div class="navigation-contacts">
 					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 
-			<a class="login" href="#">Вход</a>
-			<a class="registration" href="#">Регистрация</a>
+			<a class="user-link" href="#">Вход</a>
+			<a class="user-link" href="#">Регистрация</a>
 
 			<nav class="main-navigation">
 				<ul class="site-navigation">
