--- a/inner.html
+++ b/inner.html
@@ -37,7 +37,7 @@
 				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 			</div>
 
-			<a class="navigation-login" href="#">Равшан Джамшутович</a>
+			<a class="user-link" href="#">Равшан Джамшутович</a>
 			<a href="#">Мои заказы</a>
 			<a href="#">Личный кабинет</a>
 
