--- a/inner.html
+++ b/inner.html
@@ -73,7 +73,7 @@
 		<section class="product-list">
 			<!-- product item 1 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 3000">
+				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 3000</h3>
 				<span>22500 P.</span>
 				<a href="#">15500 P.</a>
@@ -85,7 +85,7 @@
 
 			<!-- product item 2 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 6000">
+				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 				<h3>Перфоратор BOSCH BFG 6000</h3>
 				<span>30500 P.</span>
 				<a href="#">25500 P.</a>
@@ -97,7 +97,7 @@
 
 			<!-- product item 3 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 2000">
+				<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 				<h3>Перфоратор BOSCH BFG 2000</h3>
 				<span></span>
 				<a href="#">12500 P.</a>
@@ -109,7 +109,7 @@
 
 			<!-- product item 4 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 3000">
+				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 3000</h3>
 				<span>22500 P.</span>
 				<a href="#">15500 P.</a>
@@ -121,7 +121,7 @@
 
 			<!-- product item 5 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 6000">
+				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 				<h3>Перфоратор BOSCH BFG 6000</h3>
 				<span>30500 P.</span>
 				<a href="#">25500 P.</a>
@@ -133,7 +133,7 @@
 
 			<!-- product item 6 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 2000">
+				<img class="product-photo" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 				<h3>Перфоратор BOSCH BFG 2000</h3>
 				<span></span>
 				<a href="#">12500 P.</a>
@@ -145,7 +145,7 @@
 
 			<!-- product item 7 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 3000">
+				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
 				<h3>Перфоратор BOSCH BFG 3000</h3>
 				<span>22500 P.</span>
 				<a href="#">15500 P.</a>
@@ -157,7 +157,7 @@
 
 			<!-- product item 8 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 6000">
+				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
 				<h3>Перфоратор BOSCH BFG 6000</h3>
 				<span>30500 P.</span>
 				<a href="#">25500 P.</a>
@@ -169,7 +169,7 @@
 
 			<!-- product item 9 -->
 			<article class="product-item">
-				<img class="product-photo" src="" alt="Перфоратор BOSCH BFG 2000">
+				<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
 				<h3>Перфоратор BOSCH BFG 2000</h3>
 				<span></span>
 				<a href="#">12500 P.</a>
