--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 			<a class="header-logo">Техномарт</a>
 
 			<div class="search">
-				<label>Поиск:</label>
-				<button></button>
+				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+					<button class="search-btn" type="submit"></button>
+					<label class="search-label" for="site-search">Поиск:</label>
+					<input type="search-input" id="site-search" name="search" aria-label="Поиск по сайту">
+				</form>
 			</div>
 
 			<div class="bookmark">
@@ -76,6 +79,35 @@
 				<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
 			</section>
 		</div>
+
+		<!-- WRITE US-->
+		<section class="modal modal-write-us">
+			<h2 class="visually-hidden">Напишите нам</h2>
+			<p>
+				<label for="name">Ваше имя:</label>
+				<input type="text" name="name" id="name" placeholder="Имя Фамилия">
+			</p>
+			<p>
+				<label for="email">Ваш e-mail:</label>
+				<input type="text" name="email" id="email" placeholder="email@example.com">
+			</p>
+			<p>
+				<label for="message">Текст письма:</label>
+				<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+			</p>
+
+			<button class="btn btn-send" type="submit">Отправить</button>
+			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+		</section>
+
+		<!-- MODAL MAP -->
+		<section class="modal modal-map">
+			<h2 class="visually-hidden">Как до нас добраться</h2>
+			<div>
+				<img src="img/map_big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+			</div>
+			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+		</section>
 	</main>
 
 	<!-- FOOTER -->
