--- a/inner.html
+++ b/inner.html
@@ -14,8 +14,11 @@
 			<a class="header-logo" href="index.html">Техномарт</a>
 
 			<div class="search">
-				<label>Поиск:</label>
-				<button></button>
+				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+					<button class="search-btn" type="submit"></button>
+					<label class="search-label" for="site-search">Поиск:</label>
+					<input type="search-input" id="site-search" name="search" aria-label="Поиск по сайту">
+				</form>
 			</div>
 
 			<div class="bookmark">
@@ -67,7 +70,53 @@
 		</ul>
 		<h2>Перфораторы</h2>
 
-		<!-- Здесь будет фильтр -->
+		<!-- FILTER -->
+		<section class="filters">
+			<h2>Каталог товаров</h2>
+			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
+
+				<fieldset>
+					<legend>Производители:</legend>
+					<ul>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Bosch" id="filter-bosch" checked>
+							<label for="filter-bosch">Bosch</label>
+						</li>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Интерскол" id="filter-interscol">
+							<label for="filter-interscol">Интерскол</label>
+						</li>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Makita" id="filter-makita" checked>
+							<label for="filter-makita">Makita</label>
+						</li>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Dewalt" id="filter-dewalt">
+							<label for="filter-dewalt">Dewalt</label>
+						</li>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Hitachi" id="filter-hitachi">
+							<label for="filter-hitachi">Hitachi</label>
+						</li>
+					</ul>
+				</fieldset>
+
+				<fieldset>
+				<legend>Питание:</legend>
+				<ul>
+					<li class="filter-option">
+						<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="battery" id="filter-battery" checked>
+						<label for="filter-battery">Аккумуляторные</label>
+					</li>
+					<li class="filter-option">
+						<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="network" id="filter-network">
+						<label for="filter-network">Сетевые</label>
+					</li>
+				</ul>
+				</fieldset>
+				<button class="btn-show" type="button">Показать</button>
+			</form>
+		</section>
 
 		<!-- product list -->
 		<section class="product-list">
@@ -187,6 +236,14 @@
 			<li class="pagination-item"><a href="#">3</a></li>
 			<li class="pagination-item"><a href="#">Следующая</a></li>
 		</ul>
+
+		<!-- MODAL CARD -->
+		<section class="modal modal-card">
+			<span>Товар добавлен в корзину!</span>
+			<a class="btn-checkout" href="#">Оформить заказ</a>
+			<button class="btn-continue-shopping" type="button">Продолжить покупки</button>
+			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+		</section>
 	</main>
 
 	 <!-- FOOTER -->
