--- a/inner.html
+++ b/inner.html
@@ -114,7 +114,7 @@
 					</li>
 				</ul>
 				</fieldset>
-				<button class="btn-show" type="button">Показать</button>
+				<button class="btn-show" type="submit">Показать</button>
 			</form>
 		</section>
 
