--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 			<div class="search">
 				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
-					<button class="search-btn" type="submit"></button>
+					<button class="search-btn" type="submit" aria-label="Поиск по сайту"></button>
 					<label class="search-label" for="site-search">Поиск:</label>
-					<input type="search-input" id="site-search" name="search" aria-label="Поиск по сайту">
+					<input type="search-input" id="site-search" name="search">
 				</form>
 			</div>
 
@@ -25,8 +25,8 @@
 				<a class="bookmark-link" href="#">Закладки: 0</a>
 			</div>
 
-			<div class="card">
-				<a class="card-link" href="#">Корзина: 0</a>
+			<div class="basket">
+				<a class="basket-link" href="#">Корзина: 0</a>
 			</div>
 
 			<a class="btn btn-order" href="#">Оформить заказ</a>
@@ -80,24 +80,26 @@
 			</section>
 		</div>
 
-		<!-- WRITE US-->
-		<section class="modal modal-write-us">
+		<!-- MODAL-FEEDBACK-->
+		<section class="modal modal-feedback">
 			<h2 class="visually-hidden">Напишите нам</h2>
-			<p>
-				<label for="name">Ваше имя:</label>
-				<input type="text" name="name" id="name" placeholder="Имя Фамилия">
-			</p>
-			<p>
-				<label for="email">Ваш e-mail:</label>
-				<input type="text" name="email" id="email" placeholder="email@example.com">
-			</p>
-			<p>
-				<label for="message">Текст письма:</label>
-				<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
-			</p>
+			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+				<p>
+					<label for="name">Ваше имя:</label>
+					<input type="text" name="name" id="name" placeholder="Имя Фамилия">
+				</p>
+				<p>
+					<label for="email">Ваш e-mail:</label>
+					<input type="email" name="email" id="email" placeholder="email@example.com">
+				</p>
+				<p>
+					<label for="message">Текст письма:</label>
+					<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+				</p>
 
-			<button class="btn btn-send" type="submit">Отправить</button>
-			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+				<button class="btn btn-send" type="submit">Отправить</button>
+				<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+			</form>
 		</section>
 
 		<!-- MODAL MAP -->
