добавил arial-label к иконкам соц сетей

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 	</header>
 
 	<!-- MAIN -->
-	<main class="main">
-
+	<main class="main"> 
 		<div class="information">
 			<section class="information-review">
 				<h2 class="information-title">Компания «Техномарт»</h2>
@@ -144,9 +143,9 @@
 			<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
 
 			<ul class="footer-bottom-social">
-				<li><a class="btn-social btn-social-vk" href="#">Вконтакте</a></li>
-				<li><a class="btn-social btn-social-fb" href="#">Фейсбук</a></li>
-				<li><a class="btn-social btn-social-i" href="#">Инстаграм</a></li>
+				<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
+				<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
+				<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
 			</ul>
 
 			<p class="feedback">Обратная связь:
