--- a/inner.html
+++ b/inner.html
@@ -278,9 +278,9 @@
 			<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
 
 			<ul class="footer-bottom-social">
-				<li><a class="btn-social btn-social-vk" href="#">Вконтакте</a></li>
-				<li><a class="btn-social btn-social-fb" href="#">Фейсбук</a></li>
-				<li><a class="btn-social btn-social-i" href="#">Инстаграм</a></li>
+				<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
+				<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
+				<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
 			</ul>
 
 			<p class="feedback">Обратная связь:
