--- a/inner.html
+++ b/inner.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
 
-  		<!-- HEADER -->
+<head>
+	<meta charset="utf-8">
+	<title>HTML Academy: Техномарт</title>
+</head>
+
+<body>
+	<!-- HEADER -->
 	<header class="main-header">
-
 		<!-- top menu -->
 		<div class="main-header-top">
 			<a class="header-logo" href="index.html">Техномарт</a>
-
 			<div class="search">
 				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
 					<button class="search-btn" type="submit"></button>
@@ -20,47 +19,37 @@
 					<input type="search-input" id="site-search" name="search" aria-label="Поиск по сайту">
 				</form>
 			</div>
-
 			<div class="bookmark">
 				<a class="bookmark-link" href="#">Закладки: 0</a>
 			</div>
-
 			<div class="card">
 				<a class="card-link" href="#">Корзина: 10</a>
 			</div>
-
 			<a class="btn btn-order" href="#">Оформить заказ</a>
 		</div>
-
 		<!-- main navigation -->
-			<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-
-			<div class="navigation-contacts">
-					<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
-				<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-			</div>
-
-			<a class="user-link" href="#">Равшан Джамшутович</a>
-			<a href="#">Мои заказы</a>
-			<a href="#">Личный кабинет</a>
-
-			<nav class="main-navigation">
-				<ul class="site-navigation">
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="#">Компания</a></li>
-					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Новости</a></li>
-					<li><a href="#">Спецпредложения</a></li>
-					<li><a href="#">Доставка</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-			</nav>
+		<h1 class="">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+		<div class="navigation-contacts">
+			<a class="phone-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+			<p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+		</div>
+		<a class="user-link" href="#">Равшан Джамшутович</a>
+		<a href="#">Мои заказы</a>
+		<a href="#">Личный кабинет</a>
+		<nav class="main-navigation">
+			<ul class="site-navigation">
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="#">Компания</a></li>
+				<li><a href="#">Каталог</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Спецпредложения</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</nav>
 	</header>
-
-
 	<!-- MAIN -->
 	<main class="main">
-
 		<!-- breakdcrumbs -->
 		<ul class="breadcrumbs">
 			<li><a href="#"></a></li>
@@ -69,12 +58,22 @@
 			<li class="breadcrumbs-current">Перфораторы</li>
 		</ul>
 		<h2>Перфораторы</h2>
-
 		<!-- FILTER -->
 		<section class="filters">
 			<h2>Каталог товаров</h2>
 			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
-
+				<span>Фильтр:</span>
+				<fieldset>
+					<legend>Цена:</legend>
+					<div class="range-control">
+						<div class="range-scale"></div>
+						<span class="range-toggle range-toggle-min"></span>
+						<span class="range-toggle range-toggle-max"></span>
+					</div>
+					<label aria-label="Минимальное значение цены"><input type="text" value="0"></label>
+					<span>-</span>
+					<label aria-label="Максимальное значение цены"><input type="text" value="30000"></label>
+				</fieldset>
 				<fieldset>
 					<legend>Производители:</legend>
 					<ul>
@@ -100,196 +99,197 @@
 						</li>
 					</ul>
 				</fieldset>
-
 				<fieldset>
-				<legend>Питание:</legend>
-				<ul>
-					<li class="filter-option">
-						<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="battery" id="filter-battery" checked>
-						<label for="filter-battery">Аккумуляторные</label>
-					</li>
-					<li class="filter-option">
-						<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="network" id="filter-network">
-						<label for="filter-network">Сетевые</label>
-					</li>
-				</ul>
+					<legend>Питание:</legend>
+					<ul>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="battery" id="filter-battery" checked>
+							<label for="filter-battery">Аккумуляторные</label>
+						</li>
+						<li class="filter-option">
+							<input class="visually-hidden filter-input filter-input-radio" type="radio" name="power" value="network" id="filter-network">
+							<label for="filter-network">Сетевые</label>
+						</li>
+					</ul>
 				</fieldset>
 				<button class="btn-show" type="submit">Показать</button>
 			</form>
 		</section>
-
-		<!-- product list -->
-		<section class="product-list">
-			<!-- product item 1 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-				<h3>Перфоратор BOSCH BFG 3000</h3>
-				<span>22500 P.</span>
-				<a href="#">15500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+		<!-- SORTING-->
+		<div class="sorting">
+			<span>Сортировка:</span>
+			<ul class="sorting-list">
+				<li><a href="#">По цене</a></li>
+				<li><a href="#">По типу</a></li>
+				<li><a href="#">По функционалу</a></li>
+				<li><a class="arrow-up" aria-label="по возрастанию"><a></li>
+					<li><a class="arrow-down" aria-label="по убыванию"><a></li>
+					</ul>
 				</div>
-			</article>
 
-			<!-- product item 2 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-				<h3>Перфоратор BOSCH BFG 6000</h3>
-				<span>30500 P.</span>
-				<a href="#">25500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+				<!-- PRODUCT LIST -->
+				<section class="product-list">
+
+					<!-- product item 1 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+						<h3>Перфоратор BOSCH BFG 3000</h3>
+						<span>22500 P.</span>
+						<a href="#">15500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 2 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+						<span>30500 P.</span>
+						<a href="#">25500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 3 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+						<h3>Перфоратор BOSCH BFG 2000</h3>
+						<span></span>
+						<a href="#">12500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 4 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+						<h3>Перфоратор BOSCH BFG 3000</h3>
+						<span>22500 P.</span>
+						<a href="#">15500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 5 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+						<span>30500 P.</span>
+						<a href="#">25500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 6 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+						<h3>Перфоратор BOSCH BFG 2000</h3>
+						<span></span>
+						<a href="#">12500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 7 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+						<h3>Перфоратор BOSCH BFG 3000</h3>
+						<span>22500 P.</span>
+						<a href="#">15500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 8 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+						<h3>Перфоратор BOSCH BFG 6000</h3>
+						<span>30500 P.</span>
+						<a href="#">25500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+					<!-- product item 9 -->
+					<article class="product-item">
+						<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+						<h3>Перфоратор BOSCH BFG 2000</h3>
+						<span></span>
+						<a href="#">12500 P.</a>
+						<div class="">
+							<a href="#">Купить</a>
+							<a href="#">В закладки</a>
+						</div>
+					</article>
+				</section>
+				<!--pagination list -->
+				<ul class="pagination-list">
+					<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+					<li class="pagination-item"><a href="#">2</a></li>
+					<li class="pagination-item"><a href="#">3</a></li>
+					<li class="pagination-item"><a href="#">Следующая</a></li>
+				</ul>
+				<!-- PERFORATOR-ABOUT-->
+				<section class="perforator-about">
+					<b>Пара слов о перфораторах</b>
+					<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+				</section>
+				<!-- MODAL CARD -->
+				<section class="modal modal-card">
+					<span>Товар добавлен в корзину!</span>
+					<a class="btn-checkout" href="#">Оформить заказ</a>
+					<button class="btn-continue-shopping" type="button">Продолжить покупки</button>
+					<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+				</section>
+			</main>
+			<!-- FOOTER -->
+			<footer class="footer">
+				<!-- footer top -->
+				<div class="footer-top">
+					<div class="footer-contact">
+						<a class="#" href="index.html">Техномарт</a>
+						<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+							<a href="tel:+78125550555">+7 (812) 555-05-55</a>
+						</p>
+					</div>
+					<ul class="footer-navigation">
+						<li><a href="#">Компания</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Каталог</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+					<ul class="footer-offers">
+						<li><a href="#">Материалы</a></li>
+						<li><a href="#">Техника</a></li>
+						<li><a href="#">Инструмент</a></li>
+						<li><a href="#">Спецпредложения</a></li>
+					</ul>
 				</div>
-			</article>
-
-			<!-- product item 3 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-				<h3>Перфоратор BOSCH BFG 2000</h3>
-				<span></span>
-				<a href="#">12500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
+				<!-- footer bottom -->
+				<div class="footer-bottom">
+					<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+					<ul class="footer-bottom-social">
+						<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
+						<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
+						<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
+					</ul>
+					<p class="feedback">Обратная связь:
+						<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+					</p>
+					<p class="designed-by">Разработано -
+						<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
+					</p>
 				</div>
-			</article>
+			</footer>
+		</body>
 
-			<!-- product item 4 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-				<h3>Перфоратор BOSCH BFG 3000</h3>
-				<span>22500 P.</span>
-				<a href="#">15500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
-			</article>
-
-			<!-- product item 5 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-				<h3>Перфоратор BOSCH BFG 6000</h3>
-				<span>30500 P.</span>
-				<a href="#">25500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
-			</article>
-
-			<!-- product item 6 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-				<h3>Перфоратор BOSCH BFG 2000</h3>
-				<span></span>
-				<a href="#">12500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
-			</article>
-
-			<!-- product item 7 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-				<h3>Перфоратор BOSCH BFG 3000</h3>
-				<span>22500 P.</span>
-				<a href="#">15500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
-			</article>
-
-			<!-- product item 8 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-				<h3>Перфоратор BOSCH BFG 6000</h3>
-				<span>30500 P.</span>
-				<a href="#">25500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
-			</article>
-
-			<!-- product item 9 -->
-			<article class="product-item">
-				<img class="product-photo" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-				<h3>Перфоратор BOSCH BFG 2000</h3>
-				<span></span>
-				<a href="#">12500 P.</a>
-				<div class="">
-					<a href="#">Купить</a>
-					<a href="#">В закладки</a>
-				</div>
-			</article>
-		</section>
-
-		<!--pagination list -->
-		<ul class="pagination-list">
-			<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
-			<li class="pagination-item"><a href="#">2</a></li>
-			<li class="pagination-item"><a href="#">3</a></li>
-			<li class="pagination-item"><a href="#">Следующая</a></li>
-		</ul>
-
-		<!-- MODAL CARD -->
-		<section class="modal modal-card">
-			<span>Товар добавлен в корзину!</span>
-			<a class="btn-checkout" href="#">Оформить заказ</a>
-			<button class="btn-continue-shopping" type="button">Продолжить покупки</button>
-			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
-		</section>
-	</main>
-
-	 <!-- FOOTER -->
-	<footer class="footer">
-
-		<!-- footer top -->
-		<div class="footer-top">
-			<div class="footer-contact">
-				<a class="#" href="index.html">Техномарт</a>
-				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-					<a href="tel:+78125550555">+7 (812) 555-05-55</a>
-				</p>
-			</div>
-
-			<ul class="footer-navigation">
-				<li><a href="#">Компания</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="#">Каталог</a></li>
-				<li><a href="#">Доставка</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-			<ul class="footer-offers">
-				<li><a href="#">Материалы</a></li>
-				<li><a href="#">Техника</a></li>
-				<li><a href="#">Инструмент</a></li>
-				<li><a href="#">Спецпредложения</a></li>
-			</ul>
-		</div>
-
-		<!-- footer bottom -->
-		<div class="footer-bottom">
-			<p class="copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
-
-			<ul class="footer-bottom-social">
-				<li><a class="btn-social btn-social-vk" href="#" aria-label="Вконтакте"></a></li>
-				<li><a class="btn-social btn-social-fb" href="#" aria-label="Фейсбук"></a></li>
-				<li><a class="btn-social btn-social-i" href="#" aria-label="Инстаграм"></a></li>
-			</ul>
-
-			<p class="feedback">Обратная связь:
-			    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-			</p>
-			<p class="designed-by">Разработано -
-				<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
-			</p>
-		</div>
-	</footer>
-  </body>
-</html>
+		</html>
