--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		<a class="user-link" href="#">Регистрация</a>
 		<nav class="main-navigation">
 			<ul class="site-navigation">
-				<li><a href="#">Главная</a></li>
+				<li><a href="index.html">Главная</a></li>
 				<li><a href="#">Компания</a></li>
-				<li><a href="#">Каталог</a></li>
+				<li><a href="inner.html">Каталог</a></li>
 				<li><a href="#">Новости</a></li>
 				<li><a href="#">Спецпредложения</a></li>
 				<li><a href="#">Доставка</a></li>
@@ -53,25 +53,54 @@
 		<section class="offers">
 			<div class="offers-card">
 				<h3 class="offers-title">Материалы</h3>
-				<a href="#" class="offers-btn btn-materials"></a>
+				<a href="#" class="offers-btn btn-materials">На любой вкус</a>
 			</div>
 			<div class="offers-card">
 				<h3 class="offers-title">Инструмент</h3>
-				<a href="#" class="offers-btn btn-instruments"></a>
+				<a href="#" class="offers-btn btn-instruments">На все случаи</a>
 			</div>
 			<div class="offers-card">
 				<h3 class="offers-title">Техника</h3>
-				<a href="#" class="offers-btn btn-equipment"></a>
+				<a href="#" class="offers-btn btn-equipment">Для стройки</a>
 			</div>
 			<div class="offers-card">
 				<h3 class="offers-title">Скидки 50%</h3>
-				<a href="#" class="offers-btn btn-discounts"></a>
+				<a href="#" class="offers-btn btn-discounts">На 350 товаров</a>
 			</div>
 			<div class="offers-card">
 				<h3 class="offers-title">Доставка</h3>
-				<a href="#" class="offers-btn btn-delivery"></a>
+				<a href="#" class="offers-btn btn-delivery">Бесплатно</a>
 			</div>
-			<!-- Тут будет слайдер -->
+
+			<!-- slider -->
+			<div class="slider">
+				<ul class="slider-list">
+					<!-- slider-item -->
+					<li class="slider-item">
+						<h2>Дрели</h2>
+						<span>Соседям на радость</span>
+						<a class="slide-link" href="#">Открыть каталог</a>
+					</li>
+					<li class="slider-item">
+						<h2>Перфоратор</h2>
+						<span>Настоящие мужские игрушки</span>
+						<a class="slide-link" href="#">Открыть каталог</a>
+					</li>
+				</ul>
+				<div class="slider-control">
+					<div>
+						<button class="slider-prev" type="button" aria-label="Предыдущий слайд"></button>
+						<button class="slider-next" type="button" aria-label="Следующий слайд"></button>
+					</div>
+					<ul>
+						<li><button class="slider-dots" type="button"></button></li>
+						<li><button class="slider-dots" type="button"></button></li>
+					</ul>
+				</div>
+			</div>
+
+
+
 		</section>
 		<!-- POPULAR PRODUCTS -->
 		<section class="popular-products">
@@ -133,28 +162,28 @@
 			<!-- brands-list -->
 			<ul class="brands-list">
 				<li class="brands-bosch">
-					<img src="img/bosch.jpg" width="137" height="37" alt="Товарный знак бренда Bosch">
+					<a href="#"><img src="img/bosch.jpg" width="137" height="37" alt="Товарный знак бренда Bosch"></a>
 				</li>
 				<li class="brands-makita">
-					<img src="img/makita.jpg" width="123" height="40" alt="Товарный знак бренда Makita">
+					<a href="#"><img src="img/makita.jpg" width="123" height="40" alt="Товарный знак бренда Makita"></a>
 				</li>
 				<li class="brands-dewalt">
-					<img src="img/dewalt.jpg" width="146" height="44" alt="Товарный знак бренда DeWalt">
+					<a href="#"><img src="img/dewalt.jpg" width="146" height="44" alt="Товарный знак бренда DeWalt"></a>
 				</li>
 				<li class="brands-interscol">
-					<img src="img/интерскол.jpg" width="200" height="88" alt="Товарный знак бренда Интерскол">
+					<a href="#"><img src="img/интерскол.jpg" width="200" height="88" alt="Товарный знак бренда Интерскол"></a>
 				</li>
 				<li class="brands-hitachi">
-					<img src="img/hitachi.jpg" width="169" height="31" alt="Товарный знак бренда HITACHI">
+					<a href="#"><img src="img/hitachi.jpg" width="169" height="31" alt="Товарный знак бренда HITACHI"></a>
 				</li>
 				<li class="brands-lg">
-					<img src="img/lg.jpg" width="121" height="73" alt="Товарный знак бренда LG">
+					<a href="#"><img src="img/lg.jpg" width="121" height="73" alt="Товарный знак бренда LG"></a>
 				</li>
 				<li class="brands-aeg">
-					<img src="img/aeg.jpg" width="151" height="96" alt="Товарный знак бренда AEG">
+					<a href="#"><img src="img/aeg.jpg" width="151" height="96" alt="Товарный знак бренда AEG"></a>
 				</li>
 				<li class="brands-metabo">
-					<img src="img/metabo.jpg" width="204" height="69" alt="Товарный знак бренда Metabo">
+					<a href="#"><img src="img/metabo.jpg" width="204" height="69" alt="Товарный знак бренда Metabo"></a>
 				</li>
 			</ul>
 		</section>
@@ -180,7 +209,7 @@
 			<section class="information-review">
 				<h2 class="information-title">Компания «Техномарт»</h2>
 				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-				<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
+				<p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
 				<ul class="collaboration">
 					<li>Деловые линии</li>
 					<li>Автотрейдинг</li>
@@ -191,7 +220,7 @@
 			<section class="contacts">
 				<h2>Контакты</h2>
 				<p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
-				<img class="map-location" src="#" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+				<img class="map-location" src="img/map.jpg" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
 				<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
 			</section>
 		</div>
