--- a/inner.html
+++ b/inner.html
@@ -67,8 +67,8 @@
 					<legend>Цена:</legend>
 					<div class="range-control">
 						<div class="range-scale"></div>
-						<span class="range-toggle range-toggle-min"></span>
-						<span class="range-toggle range-toggle-max"></span>
+						<button class="range-toggle range-toggle-min"></button>
+						<button class="range-toggle range-toggle-max"></button>
 					</div>
 					<label aria-label="Минимальное значение цены"><input type="text" value="0"></label>
 					<span>-</span>
@@ -115,6 +115,7 @@
 				<button class="btn-show" type="submit">Показать</button>
 			</form>
 		</section>
+
 		<!-- SORTING-->
 		<div class="sorting">
 			<span>Сортировка:</span>
@@ -123,9 +124,9 @@
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По функционалу</a></li>
 				<li><a class="arrow-up" aria-label="по возрастанию"><a></li>
-					<li><a class="arrow-down" aria-label="по убыванию"><a></li>
-					</ul>
-				</div>
+				<li><a class="arrow-down" aria-label="по убыванию"><a></li>
+			</ul>
+		</div>
 
 				<!-- PRODUCT LIST -->
 				<section class="product-list">
@@ -239,7 +240,7 @@
 				</ul>
 				<!-- PERFORATOR-ABOUT-->
 				<section class="perforator-about">
-					<b>Пара слов о перфораторах</b>
+					<h2>Пара слов о перфораторах</h2>
 					<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
 				</section>
 				<!-- MODAL CARD -->
