--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<title>HTML Academy: Техномарт</title>
 </head>
 
@@ -16,7 +19,7 @@
 				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
 					<button class="search-btn" type="submit" aria-label="Поиск по сайту"></button>
 					<label class="search-label" for="site-search">Поиск:</label>
-					<input type="search-input" id="site-search" name="search">
+					<input class="search-input" type="search" id="site-search" name="search">
 				</form>
 			</div>
 			<div class="bookmark">
@@ -224,34 +227,6 @@
 				<a class="btn write-us" href="#">Заблудились? Напишите нам!</a>
 			</section>
 		</div>
-		<!-- MODAL-FEEDBACK-->
-		<section class="modal modal-feedback">
-			<h2 class="visually-hidden">Напишите нам</h2>
-			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-				<p>
-					<label for="name">Ваше имя:</label>
-					<input type="text" name="name" id="name" placeholder="Имя Фамилия">
-				</p>
-				<p>
-					<label for="email">Ваш e-mail:</label>
-					<input type="email" name="email" id="email" placeholder="email@example.com">
-				</p>
-				<p>
-					<label for="message">Текст письма:</label>
-					<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
-				</p>
-				<button class="btn btn-send" type="submit">Отправить</button>
-				<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
-			</form>
-		</section>
-		<!-- MODAL MAP -->
-		<section class="modal modal-map">
-			<h2 class="visually-hidden">Как до нас добраться</h2>
-			<div>
-				<img src="img/map_big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-			</div>
-			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
-		</section>
 	</main>
 	<!-- FOOTER -->
 	<footer class="footer">
@@ -293,6 +268,35 @@
 			</p>
 		</div>
 	</footer>
+
+	<!-- MODAL-FEEDBACK-->
+		<section class="modal modal-feedback">
+			<h2 class="visually-hidden">Напишите нам</h2>
+			<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+				<p>
+					<label for="name">Ваше имя:</label>
+					<input type="text" name="name" id="name" placeholder="Имя Фамилия">
+				</p>
+				<p>
+					<label for="email">Ваш e-mail:</label>
+					<input type="email" name="email" id="email" placeholder="email@example.com">
+				</p>
+				<p>
+					<label for="message">Текст письма:</label>
+					<textarea id="message" name="message" placeholder="В свободной форме"></textarea>
+				</p>
+				<button class="btn btn-send" type="submit">Отправить</button>
+				<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+			</form>
+		</section>
+		<!-- MODAL MAP -->
+		<section class="modal modal-map">
+			<h2 class="visually-hidden">Как до нас добраться</h2>
+			<div>
+				<img src="img/map_big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+			</div>
+			<button class="modal-close" type="button" aria-label="Закрыть модальное окно"></button>
+		</section>
 </body>
 
 </html>
