--- a/inner.html
+++ b/inner.html
@@ -16,7 +16,7 @@
 				<form class="search-form" method="get" action="https://echo.htmlacademy.ru">
 					<button class="search-btn" type="submit"></button>
 					<label class="search-label" for="site-search">Поиск:</label>
-					<input type="search-input" id="site-search" name="search" aria-label="Поиск по сайту">
+					<input class="search-input" type="search" id="site-search" name="search" aria-label="Поиск по сайту">
 				</form>
 			</div>
 			<div class="bookmark">
@@ -123,14 +123,14 @@
 				<li><a href="#">По цене</a></li>
 				<li><a href="#">По типу</a></li>
 				<li><a href="#">По функционалу</a></li>
-				<li><a class="arrow-up" aria-label="по возрастанию"><a></li>
-				<li><a class="arrow-down" aria-label="по убыванию"><a></li>
+				<li><a class="arrow-up" aria-label="по возрастанию"></a></li>
+				<li><a class="arrow-down" aria-label="по убыванию"></a></li>
 			</ul>
 		</div>
 
 				<!-- PRODUCT LIST -->
 				<section class="product-list">
-
+					
 					<!-- product item 1 -->
 					<article class="product-item">
 						<img class="product-photo" src="img/Perforator_1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
